<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Budget.TextView"
        android:layout_gravity="center_horizontal"
        android:text="@string/student_budget"
        android:textColor="@color/amber"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Budget.TextView"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:drawablePadding="9dp"
            android:text="@string/name"
            android:textSize="23sp"
            app:drawableStartCompat="@drawable/ic_name" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:autofillHints="username"
            android:drawablePadding="9dp"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:textSize="23sp"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Budget.TextView"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="9dp"
            android:text="@string/budget"
            android:textSize="23sp"
            app:drawableStartCompat="@drawable/ic_money" />

        <EditText
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:autofillHints="currency"
            android:drawablePadding="9dp"
            android:inputType="number"
            android:hint="@string/enter_budget"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Budget.TextView"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="9dp"
            android:text="@string/academic_year"
            android:textSize="23sp"
            app:drawableStartCompat="@drawable/ic_calendar" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:autofillHints="date"
            android:drawablePadding="9dp"
            android:hint="@string/enter_year"
            android:inputType="numberDecimal"
            android:textSize="23sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="50dp"
            android:text="@string/next" />


    </LinearLayout>

</LinearLayout>