<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.studentbudget.StartFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_expensesFragment"
            app:destination="@id/expensesFragment" />
    </fragment>
    <fragment
        android:id="@+id/expensesFragment"
        android:name="com.example.studentbudget.ExpensesFragment"
        android:label="@string/expenses"
        tools:layout="@layout/fragment_expenses" >
        <action
            android:id="@+id/action_expensesFragment_to_budgetFragment"
            app:destination="@id/budgetFragment" />
    </fragment>
    <fragment
        android:id="@+id/budgetFragment"
        android:name="com.example.studentbudget.BudgetFragment"
        android:label="@string/budget"
        tools:layout="@layout/fragment_budget" >
        <action
            android:id="@+id/action_budgetFragment_to_expensesFragment"
            app:destination="@id/expensesFragment" />
    </fragment>
</navigation>