<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BudgetFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/all_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        tools:text="I..." />

    <View
        android:id="@+id/divider1"
        style="@style/Widget.Budget.Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginBottom="@dimen/side_margin" />


    <TextView
        android:id="@+id/total_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/total_expenses"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        tools:text="10000" />

    <View
        android:id="@+id/divider2"
        style="@style/Widget.Budget.Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginBottom="@dimen/side_margin" />


    <TextView
        android:id="@+id/total_deductible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/total_deductible"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deductible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        tools:text="0.sh" />

    <View
        android:id="@+id/divider3"
        style="@style/Widget.Budget.Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginBottom="@dimen/side_margin" />


    <TextView
        android:id="@+id/budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/budget"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/budget_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        tools:text="Successful" />

    <View
        android:id="@+id/divider4"
        style="@style/Widget.Budget.Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginBottom="@dimen/side_margin" />




</LinearLayout>